# sdfland

./: .gitignore  CMakeLists.txt
msvc-project/sdl2stub/: sdl2stub.vcxproj
src/: abaciinlines.cpp  main.cpp  sdfscene.cpp  sdfscene.h
src/render/: image.cpp  image.h  program.cpp  program.h  render.cpp  render.h  texture.cpp  texture.h
src/shader/: fullbright_frag.glsl  fullbright_texture_frag.glsl  fullbright_texture_vert.glsl  fullbright_vert.glsl  sdf2d_frag.glsl  sdf2d_vert.glsl
